Chrome renders text in html element differently from FF and Safari. That was causing a problem with changing a dimension of the news tile height, what was finally the reason of gaps in the next tiles row as the they were pushed down. Setting fixed height on a tile container should be a solution.
(+ minor fixes in css intendation)

--- a/source/assets/stylesheets/styles/_news_tile.scss
+++ b/source/assets/stylesheets/styles/_news_tile.scss
@@ -3,15 +3,19 @@
 }
 
 .news-tile__container {
- @extend .blog-medium-tile__container;
+  @extend .blog-medium-tile__container;
+
+  @include breakpoint($tablet-breakpoint) {
+    height: 386px;
+ }
 }
 
 .news-tile__top-content {
- @extend .blog-medium-tile__top-content;
+  @extend .blog-medium-tile__top-content;
 }
 
 .news-tile__title {
- @extend .blog-medium-tile__title;
+  @extend .blog-medium-tile__title;
 }
 
 .news-tile__date {
